[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/rainyhearts.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/UI/bg.png" type="Texture" id=2]
[ext_resource path="res://assets/UI/Landscape.png" type="Texture" id=3]
[ext_resource path="res://src/World/TitleScreen.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0313726, 0.145098, 0.411765, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.356863, 0.027451, 0.027451, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.0313726, 0.145098, 0.411765, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="DynamicFont" id=7]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 12
font_data = ExtResource( 1 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="Landscape" type="Sprite" parent="."]
position = Vector2( 160, 90 )
scale = Vector2( 0.5, 0.375 )
texture = ExtResource( 3 )

[node name="CopperPlate" type="Sprite" parent="."]
position = Vector2( 155.5, 90 )
scale = Vector2( 1.61719, 1.33594 )
texture = ExtResource( 2 )

[node name="StartButton" type="Button" parent="."]
margin_left = 132.0
margin_top = 75.0
margin_right = 188.0
margin_bottom = 95.0
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "Start"

[node name="Credits" type="Button" parent="."]
margin_left = 4.0
margin_top = 155.0
margin_right = 56.0
margin_bottom = 175.0
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "Credits"

[node name="LevelSelect" type="Button" parent="."]
margin_left = 115.0
margin_top = 123.0
margin_right = 206.0
margin_bottom = 143.0
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "Level Select"

[node name="QuitButton" type="Button" parent="."]
margin_left = 274.0
margin_top = 154.0
margin_right = 312.0
margin_bottom = 174.0
custom_fonts/font = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Exit"
__meta__ = {
"_edit_group_": true
}

[node name="HelpButton" type="Button" parent="."]
margin_left = 122.0
margin_top = 99.0
margin_right = 196.0
margin_bottom = 119.0
custom_fonts/font = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "Gameplay"

[node name="Title" type="Label" parent="."]
margin_left = 48.0
margin_top = 25.0
margin_right = 267.0
margin_bottom = 78.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "MAGITING"
align = 1
valign = 1

[node name="Label" type="Label" parent="."]
margin_left = 66.0
margin_top = 149.0
margin_right = 108.0
margin_bottom = 164.0
custom_fonts/font = SubResource( 8 )
text = "3studioÂ©"

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="LevelSelect" to="." method="_on_LevelSelect_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="HelpButton" to="." method="_on_HelpButton_pressed"]
